2008-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h: Add missing operator=(const std::string &) to
	the Mat class

	There is a Mat(const std::string &) constructor but the assignment
	operator for this type of argument has not been implemented. This
	patch adds this missing operator.

	* itpp/base/mat.cpp, itpp/base/mat.h: Add element-wise division
	operator with a scalar as the dividend

	This new operator complements a similar one, which performs
	element-wise division of a matrix by a scalar.

	* itpp/base/mat.h, itpp/base/matfunc.h, itpp/base/specmat.cpp,
	tests/mat_test.cpp, tests/mat_test.ref: Deprecate
	Mat<>::set_submatrix(r1,r2,c1,c2,m) function

	This function provides identical results as set_submatrix(r,c,m).
	Moreover, the r2 and c2 indexing arguments are redundant, because
	their values are determined by the size of the input matrix m.
	This patch marks this function as deprecated, for possible removal
	from future IT++ major releases.

	* itpp/base/mat.cpp, itpp/base/mat.h: Add in_range(r,c),
	col_in_range(c) and row_in_range(r) inline methods

	This is a pure clean-up patch which simplifies it_assert_debug()
	checks. BTW, it also includes a few cosmetic changes to other
	assertion checks.

	* itpp/base/mat.cpp, itpp/base/mat.h: Make consistent naming of
	variables used in the Mat class interface

	This patch unifies the variable names in the Mat class interface.
	The following names are now commonly used:
	- m, m1, m2, etc.: matrix
	- v: vector
	- t: simple numeric type Num_T, e.g. bin, int, double
	- r, r1, r2: row index
	- c, c1, c2: column index
	- i: generic index

	* itpp/base/mat.cpp, itpp/base/mat.h: Clean-up redundant use of
	"const" keyword in the Mat class

	There is no need for declaring the returned by value types with an
	additional "const" keyword. Moreover, Num_T is assumed a simple or
	built in type for the Mat class, i.e. bin, short int, int, double